--- a/vignettes/articles/evoked-current-analysis.Rmd
+++ b/vignettes/articles/evoked-current-analysis.Rmd
@@ -8,8 +8,8 @@ description: >
 ```{r evoked-setup, include = FALSE}
 knitr::opts_chunk$set(
   fig.align = "center",
-  out.extra='',
-  out.width="75%",
+  out.extra = "",
+  out.width = "75%",
   echo = FALSE
 )
 
